# phrase-generator

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  buildme.sh  docker-compose-template.yml  docker-compose.yml  migrateme.sh  readme.md  runme.sh  rust-toolchain.toml  sonar-project.properties
.cargo/: config.toml
compose-workspace/phrasegen/: .dev.env
compose-workspace/tts-wrapper/config/: application.properties
draft_ideas/: grammar.md  select_ids_of_tags.sql  select_random_production.sql  select_random_word.sql  select_shortest_production.sql  simple-fixture.sql  word_db.csv  word_semantics_db.csv
migrations/: 20211225223734_bnf_basics.down.sql  20211225223734_bnf_basics.up.sql  20220101000000_sequences_fix.up.sql  20220202225415_generation_result_storage.down.sql  20220202225415_generation_result_storage.up.sql
src/: main.rs
src/app_core/: mod.rs
src/app_core/engine/types/: grammar.rs  mod.rs  parsing.rs
src/app_core/engine/types/unit_tests/: grammar.rs  mod.rs  parsing.rs
src/app_core/errors/: mod.rs
src/app_core/types/: upload.rs
src/core/: mod.rs
src/outgoing/: mod.rs
src/outgoing/tts_wrapper/: mod.rs
src/outgoing/tts_wrapper/types/: inbound.rs  mod.rs  outbound.rs
src/outgoing/types/: mod.rs
src/served/: mod.rs
src/served/types/: graphql.rs
src/utils/: mod.rs  regex.rs
suggested_hooks/: pre-commit  pre-push
