[package]
name = "phrase-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web="4.0.0-beta.11"
async-trait = "0.1.51"
async-graphql="3.0.6"
async-graphql-actix-web="3.0.6"
rand = "0.8"
reqwest={version = "0.11.6", features = ["json"]}
serde="1.0.130"

[profile.release]
lto = "thin"
codegen-units = 8
opt-level = 3
incremental = false

[profile.dev]
# removes debug symbols, to debug with lldb set this to 2
debug = 2
split-debuginfo = "unpacked"
incremental = true
overflow-checks = false
opt-level = 0
