[package]
name = "phrase-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sqlx = { version = "0.5.9", features = [ "postgres", "runtime-actix-rustls", "macros", "migrate", "offline" ] }
actix-web="4.0.0-beta.15"
async-trait = "0.1.52"
async-graphql="3.0.17"
async-graphql-actix-web="3.0.17"
itertools = "0.10.3"
rand = "0.8.4"
reqwest={version = "0.11.6", features = ["json"]}
serde="1.0.132"
thiserror = "1.0.30"
tracing = "0.1.29"
tracing-subscriber = "0.3.4"
url="2.2.2"
futures="0.3.19"
lazy_static="1.4.0"
regex="1.5.4"

[profile.release]
lto = "thin"
codegen-units = 8
opt-level = 3
incremental = true

[profile.dev]
# removes debug symbols, to debug with lldb set this to 2
debug = 2
split-debuginfo = "unpacked"
incremental = true
overflow-checks = false
opt-level = 0
